modify page names

--- a/index1.html
+++ b/index1.html
@@ -8,94 +8,67 @@
     <link rel="stylesheet" href="CSS/style.css">
 
     <nav>
-      <div id="home"></div>
-        <div class="topnav" >
-          <a> <img src="./images/logo1.png" alt="logo"> </a>
-            <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+        <div id="top"></div>
+        <div class="topnav">
+            <a class="active" href="./index1.html">< Home </a>
           </div>
-
-          <br><br><br>
-
+         
     </nav>
+    <br><br><br>
 </head>
 <body>
-    <h1>Plants</h1>
-    <p>The relationship between plants and people is a long and continuous one. We need plants for basic human purposes. We eat them in many forms; we make medicines, soaps, furniture, textiles, tyres and much more from them. Plants play a very important role in our lives. Although we now live in a highly industrialised society, we have not lost this dependence on plants. We need to be aware of the part that plants play in our lives and must ensure that we care for these plants to continue this long relationship.  <br> Plants are really important for the planet and for all living things. Plants absorb carbon dioxide and release oxygen from their leaves, which humans and other animals need to breathe.</p>
-
-    <img src="./images/background2.jpg" alt="plants" class="plants">
-
-    <p>Every green plant on the planet has an important function: they suck in carbon dioxide and transform it into oxygen. Carbon dioxide is a greenhouse gas that contributes to climate change and global warming. Plants provide us with food, fiber, shelter, medicine, and fuel. The basic food for all organisms is
-        produced by green plants. In the process of food production, oxygen is released. This oxygen, which we
-        obtain from the air we breathe, is essential to life. The only source of food and oxygen are plants; no
-        animal alone can supply these. Shelter, in the form of wood for houses; and clothing, in the form of
-        cotton fibers, are obvious uses of plant materials. But we must not forget fuel, furniture, paper
-        products, certain medicines like aspirin, and many other products like perfume and chewing gum. To
-        these tangible aspects of the plant world we must also add the importance of beauty and relaxation
-        derived from plants. Since animals are surrounded by and dependent upon plants, the factors that
-        influence plant growth, structure, and distribution, affect the animal world as well. </p>
-
-    <p>Here are few options for you; </p>
-
     
-   <div class="type">
-  <div class="card">
-      <a href="./index.html">
-    <img src="./images/indoorcard2.jpg" alt="Indoor plants" style="width:90%">
-    <div class="container">
-      <h4><b>10 best Indoor plants</b></h4>
-      <p></p>
-    </div>
-   </a>
-  </div>
+    <h1>Indoor Plants</h1>
+    <p>Indoor plants are always in fashion. In many ways, they offer the best of both worlds: the joys of gardening, without most of the hard work. As such, the question isn’t ‘should I get an indoor plant?’, but rather, ‘what are the best indoor plants for me?’ Luckily, there are awesome indoor plants to suit almost anyone’s needs.Even if your home is lacking in square footage, incorporating some greenery here and there is essential to bringing it to life. Naturally, indoor plants add more beauty to a space while also providing functional benefits, like promoting a positive mood, purifying the air, and making you feel connected to nature without having to step outside. So there is no reason to let a small space or lack of gardening experience stop you from flexing your green thumb inside your home!</p>
+    <h3>10 easy care house plants you need to have this summer:</h3>
+    <ol>
+        <li><a href="#zz">ZZ Plant</a></li> 
+        <li><a href="#snake">Snake Plant</a></li>
+        <li><a href="#devil">Devils Ivy</a></li>
+        <li><a href="#succ">Succulants</a></li>
+        <li><a href="#spider">Spider Plant</a></li>
+        <li><a href="#peace">Peace Lilly</a></li>
+        <li><a href="#string">String of Pearls</a></li>
+        <li><a href="#rubber">Rubber PLant</a></li>
+        <li><a href="#jade">Jade Plant</a></li>
+        <li><a href="#fern">Fern</a></li>
+    </ol>
 
-  <br><br>
+    <h2 id="zz">1. ZZ Plant</h2>
+    <img src="./images/zzplant2.jpg" alt="zz plant">
+    <p class="description">If there’s one houseplant that can thrive even in the face of neglect, it’s the ZZ plant. This lush tropical perennial also known as aroid palm or by its mouthful of a botanical name, Zamioculcas zamiifolia is adaptable to infrequent waterings and all kinds of light conditions. That means you can incorporate the ZZ plant and its shiny deep-green leaves into many different spaces, from fluorescent-lit offices to a spacious open-plan living room with lots of light.</p>
+    <h2 id="snake">2. Snake Plant</h2>
+    <img src="./images/snakeplant1.jpg" alt="snake plant">
+    <p class="description">Snake plants (Sansevieria trifasciata) are some of the hardiest houseplants around. Also known as sansevieria, most snake plants have slender, upright leaves in variegated patterns that grow about three or four feet high.</p>
+    <h2 id="devil">3. Devils Ivy</h2>
+    <img src="./images/devil1.jpg" alt="devil's ivy plant">
+    <p class="description">Pothos (Epipremnum aureum), also known as devil’s ivy, is one of the easiest houseplants to grow. They're fast, lush growers, are drought-tolerant, and thrive in just about any lighting situation. They're also, however, toxic to people and pets,
 
-  <div class="card">
-    <a href="./index2.html">
-  <img src="./images/outdoor3.jpg" alt="Outdoor plants" style="width:90%">
-  <div class="container">
-    <h4><b>10 best Ondoor plants</b></h4>
-    <p></p>
-  </div>
- </a>
-</div>
-
-
-<div class="card">
-    <a href="./index3.html">
-  <img src="./images/hanging4.jpg" alt="Outdoor plants" style="width:90%">
-  <div class="container">
-    <h4><b>Plants for hanging baskets</b></h4>
-    <p></p>
-  </div>
- </a>
-</div>
-</div>
-
-<br><br><br>
-
-<section id="contact">
-
-  <h2>The Plant story</h2>
-        <h4>contact@theplantstory.com</h4>
-        <h4>414-3355-0953</h4>
-
-
-
-</section>
-
-<section id="about">
-
-  <!-- <h2>About</h2> -->
-  <h4>This website is made for the love of plants &hearts;</h5>
-
-</section>
+        so you'll want to keep a close eye on the fast-growing vines to ensure they stay out of reach.</p>
+    <h2 id="succ">4. Succulants</h2>
+    <img src="./images/succ1.jfif" alt="succulents">
+    <p class="description">While many easygoing houseplants can be propagated, none are quite so simple as succulents. Whether you're growing your garden on a budget or keeping your favorite plants healthy, propagating your succulents is an easy way to create new growth without ever purchasing a new plant.</p>
+    <h2 id="spider">5. Spider Plant</h2>
+    <img src="./images/spider1.jpg" alt="spider plant">
+    <p class="description">Spider plants never go out of style thanks to their hardiness, attractive tropical foliage, and nearly foolproof care instructions. Here are our tips for keeping your spider plants healthy and looking lush.</p>
+    <h2 id="peace">6. Peace Lilly</h2>
+    <img src="./images/peace1.jpg" alt="peace lily plant">
+    <p class="description">A long-time favorite of those with a green-thumb and even those without, Spathiphyllum, commonly known as the peace lily, is an adaptable and low-maintenance houseplant. Peace lilies are not true lilies (Lilium spp.) at all, but rather a member of the Araceae family. Its flowers resemble those of the calla lily (both plants belong to the same family) and is the reason for its name. The showy part of the flower features a white, hoodlike sheath (known as a spathe) which resembles a white flag of surrender.</p>
+    <h2 id="string">7. String of Pearls</h2>
+    <img src="./images/string1.jfif" alt="string of pearls plant">
+    <p class="description">String of pearls is a beautiful, cascading succulent that will add that little quirk to any house. The plant grows fast and propagates easily and can grow both indoor and outdoor. If you are looking for a beautiful succulent to grow, Senecio Rowleyanus Strings of pearls is a great choice. And there’re a few care tips that you need to know to care for String of pearls properly.</p>
+    <h2 id="rubber">8. Rubber Plant</h2>
+    <img src="./images/rubber2.jpg" alt="rubber plant">
+    <p class="description">Ficus elastica, also known as the rubber plant, is an unusual-looking varietal native to the tropics of Southeast Asia. It boasts oversized, oval-shaped leaves that are a rich emerald hue, and can grow quickly, reaching up to 100 feet tall in its natural habitat. However, it's more often grown indoors as a houseplant, where it can be planted and cared for year-round and its size kept more manageable.</p>
+    <h2 id="jade">9. Jade Plant</h2>
+    <img src="./images/jade2.jfif" alt="jade plant">
+    <p class="description">Jade plants are succulent houseplants, which makes them fairly resilient and easy to grow indoors—plus, they’re capable of living a long, long time with proper care! See how to care for your jade plant.</p>
+    <h2 id="fern">10. Fern</h2>
+    <img src="./images/fern2.jpg" alt="fern plant">
+    <p class="description">Ferns are relatively easy to grow; however, drafts, dry air, and temperature extremes won’t help. Ferns that are pampered and protected from things like dry air and temperature extremes will reward you with lush green fronds all year round, beautifying your indoor garden more than you could imagine. Let’s learn more about growing ferns indoors.</p>
+</body>
 
 <footer>
-  <p>Plant Lover | 	&copy; All Rights Reserved | 2022</p>
+    <a href="#top" class="back">Back To Top</a>
 </footer>
-
-</body>
 </html>
