--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
    <div class="type">
   <div class="card">
-      <a href="./index.html">
+      <a href="./index1.html">
     <img src="./images/indoorcard2.jpg" alt="Indoor plants" style="width:90%">
     <div class="container">
       <h4><b>10 best Indoor plants</b></h4>
