--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
     <nav>
         <div id="top"></div>
         <div class="topnav">
-            <a class="active" href="./index1.html">< Home </a>
+            <a class="active" href="./index.html">< Home </a>
           </div>
          
     </nav>
